# hoed-mini

./: Hoed.cabal  LICENSE  README.md  hoed-mini.cabal
Debug/Hoed/: Observe.lhs
examples/: GDM-hello.hs  Selectors.hs  SternBrocot.lhs  TH-hello.hs
