name:                Hoed
version:             0.1.0.0
synopsis:            Lighweight debugging based on the observing of intermediate values and the cost centre stack at time of evaluation.
description:         Debug anything without recomping everything!
homepage:            http://maartenfaddegon.nl/pub
license:             BSD3
license-file:        LICENSE
author:              Maarten Faddegon
maintainer:          hoed@maartenfaddegon.nl
copyright:           (c) 2000 Andy Gill, (c) 2010 University of Kansas, (c) 2013-2014 Maarten Faddegon
category:            Debug, Trace
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Debug.Hoed.Observe
  build-depends:       base >=4.6 && <5, template-haskell >=2.7.0 && <2.10, array
  default-language:    Haskell2010
