name:                hoed-mini
version:             0.3
synopsis:            Debug anything without recompiling everything!
description:         Lightweight debugging based on the observing of intermediate values. How values are observed can be derived with the Generic Deriving Mechanism, or generated with Template Haskell.
homepage:            http://maartenfaddegon.nl/pub
license:             BSD3
license-file:        LICENSE
author:              Maarten Faddegon
maintainer:          hoed@maartenfaddegon.nl
copyright:           (c) 2000 Andy Gill, (c) 2010 University of Kansas, (c) 2013-2014 Maarten Faddegon
category:            Debug, Trace
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://maartenfaddegon.nl/pub
tested-with:         GHC >= 7.10
Extra-Source-Files: README.md
                    
source-repository head
  type:     git
  location: git://github.com/pepeiborra/hoed-mini
                                 
flag buildExamples
    description: Build example executables.
    default:     False

library
  exposed-modules:     Debug.Hoed.Observe
  build-depends:       base >=4.6 && <5, array, prelude-extras
  default-language:    Haskell2010
  if impl(ghc < 7.10)
    extensions: OverlappingInstances
  
Executable hoed-examples-GDM-hello
  if flag(buildExamples)
        build-depends: base >= 4.6 && < 5, Hoed
  else
        buildable: False
  main-is:             GDM-hello.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Executable hoed-examples-TH-hello
  if flag(buildExamples)
        build-depends: base >= 4.6 && < 5, Hoed
  else
        buildable: False
  main-is:             TH-hello.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Executable hoed-examples-SternBrocot
  if flag(buildExamples)
        build-depends: base >= 4.6 && < 5, Hoed
  else
        buildable: False
  main-is:             SternBrocot.lhs
  hs-source-dirs:      examples
  default-language:    Haskell2010

Executable hoed-examples-GDM-selectors
  if flag(buildExamples)
        build-depends: base >= 4.6 && < 5, Hoed
  else
        buildable: False
  main-is:             Selectors.hs
  hs-source-dirs:      examples
  default-language:    Haskell2010
